tests/ui/const-generics/const-param-before-other-params.stderr
error: lifetime parameters must be declared prior to type and const parameters
  --> $DIR/const-param-before-other-params.rs:1:21
   |
LL | fn bar<const X: u8, 'a>(_: &'a ()) {
   |       --------------^^- help: reorder the parameters: lifetimes, then consts and types: `<'a, const X: u8>`

error: aborting due to previous error

